testnetworking/test2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-manual

spec:
  replicas: 3
  selector:
   matchLabels:
     env: nginx

  template:
    metadata:
      labels:
        env: nginx

    spec:
      containers:
      - image: nginx
        name: nginx-manual
