testnetworking/test3.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kplabs-dmz

spec:
  replicas: 2
  selector:
    matchLabels:
      env: nginxtest3

  template:
    metadata:
      labels:
        env: nginxtest3
    spec:
      containers:
      - image: nginx
        name: test3nginx
