testnetworking/nodePortsrc.yaml
apiVersion: v1 
kind: Service
metadata:
  name: nodeportsvc

spec:
  type: NodePort
  selector:
    env: nginx

  ports:
  - port: 8080
    targetPort: 80
