testnetworking/test2endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata: 
  name: service-manual
subsets:
- addresses:
  - ip: 10.244.0.50
  - ip: 10.244.0.94
  - ip: 10.244.0.29
