testnetworking/test2service.yaml
apiVersion: v1
kind: Service

metadata:
  name: service-manual

spec:
  ports:
  - port: 80
    targetPort: 80
