testnetworking/test3lb.yaml
apiVersion: v1
kind: Service

metadata:
  name: service-elb

spec:
  selector:
    env: nginxtest3
  type: LoadBalancer

  ports:
  - port: 80
    targetPort: 80
