testnetworking/test4svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: single-service

spec:
  ports:
  - port: 8080
    targetPort: 80

  selector:
    run: single-pod
