testnetworking/test5.yaml
apiVersion: extensions/v1beta1

kind: Ingress
metadata:
  name: namebased-ingress

spec:
  rules:
  - host: example.com
    http: 
      paths: 
      - backend:
          serviceName: service1
          servicePort: 8085

  - host: test.com
    http:
      paths:
      - backend:
          serviceName: service2
          servicePort: 8089

  - http:
      paths:
      - backend:
          serviceName: service3
          servicePort: 9005
